--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -3,12 +3,12 @@
 {% block extrahead %}
 
 <meta name="description"
-    content="Install the right driver from setup.brother.com is the first step. Getting the correct driver installed is key to making it work smoothly with your computer. Here’s a quick and simple guide to help you do it right away." />
+    content="web.whatsapp.com is the official portal to connect your phone with your device. In case you're attempting to link your WhatsApp account on your computer with web.whatsapp.com, but it seems like it’s not functioning properly. This tutorial is going to show you the step-by-step process of how to use WhatsApp Web and then give you simple and quick fixes for most problems which users encounter while trying to get connected." />
 <meta name="keywords"
-    content="setup.brother.com, brother printer setup, install brother printer, download brother printer drivers, brother printer software, connect brother printer to wifi, brother printer installation, brother printer driver download, setup brother printer on windows, setup brother printer on mac" />
+    content="web.whatsapp.com, WhatsApp Web, how to use WhatsApp Web, connect WhatsApp to PC, WhatsApp Web QR code, WhatsApp Web login, open WhatsApp on computer, WhatsApp desktop connection, fix WhatsApp Web issues, WhatsApp Web setup" />
 <meta name="robots" content="index, follow" />
-<title>setup.brother.com - Guide to Install a brother printer to my computer</title>
-<meta name="google-site-verification" content="fy-De8nRP9dFQZxH88D34Izd_VmTE1SeLxppV19--zQ" />
-<meta name="msvalidate.01" content="9FC84D0B63404C9A0FEFBC5633185933" />
+
+<title>How to Set Up WhatsApp Web on Your Browser via web.whatsapp.com</title>
+
     {{ super() }}
 {% endblock %}
