--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -9,6 +9,7 @@
 <meta name="robots" content="index, follow" />
 
 <title>How to Set Up WhatsApp Web on Your Browser via web.whatsapp.com</title>
-
+<meta name="google-site-verification" content="pBHqm1fvpebN_b9riXygZ1e22lLuHou4itqjw3FJVKY" />
+<meta name="msvalidate.01" content="E54AD21729F6EC51862E017C6E977FEF" />
     {{ super() }}
 {% endblock %}
